[gd_scene load_steps=14 format=3 uid="uid://basa2hw4fxtl0"]

[ext_resource type="Script" uid="uid://wambilu3erlm" path="res://TitleScreen/title_screen.gd" id="1_skoes"]
[ext_resource type="Texture2D" uid="uid://ct8jgg1qk088i" path="res://TitleScreen/sprites/title_screen_placeholdere.png" id="1_xvftn"]
[ext_resource type="AudioStream" uid="uid://b8fdjyabyitf4" path="res://Audio/click.wav" id="2_0k6bx"]
[ext_resource type="FontFile" uid="uid://dqrqrvboo8eeq" path="res://Fonts/Abaddon-Bold.ttf" id="2_2e2ej"]
[ext_resource type="AudioStream" uid="uid://b0wellchjisbo" path="res://Audio/example_music_02.ogg" id="2_ka7ac"]
[ext_resource type="Texture2D" uid="uid://bige2676xisao" path="res://Scenes/Bonbon/BonbonSprites_.png" id="2_ux371"]
[ext_resource type="PackedScene" uid="uid://sx10ttkyxwwi" path="res://Scenes/Levels/player_spawn.tscn" id="4_skoes"]

[sub_resource type="Animation" id="Animation_skoes"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2e2ej"]
resource_name = "default"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0k6bx"]
_data = {
&"RESET": SubResource("Animation_skoes"),
&"default": SubResource("Animation_2e2ej")
}

[sub_resource type="Animation" id="Animation_5d78q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(625, 341)]
}

[sub_resource type="Animation" id="Animation_ka7ac"]
resource_name = "default"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.3333333, 0.5, 0.6666666, 0.8333333, 0.99999994, 1.1666667, 1.3333334, 1.5, 1.6666667, 1.8333334, 2, 2.1666665, 2.3333333, 2.5, 2.6666665, 2.8333333, 3, 3.1666665, 3.3333333, 3.5, 3.6666665, 3.8333333, 3.9999998, 4.166667, 4.3333335, 4.5, 4.666667, 4.8333335),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 24, 25, 26, 27, 24, 25, 26, 27, 24, 25, 26, 27, 24, 25, 26, 27, 24, 25, 26, 27, 24, 25, 26, 27, 24, 25]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.004280781, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(15, 685), Vector2(1270, 685)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j0m2k"]
_data = {
&"RESET": SubResource("Animation_5d78q"),
&"default": SubResource("Animation_ka7ac")
}

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_skoes")
music = ExtResource("2_ka7ac")
button_focus_audio = ExtResource("2_0k6bx")
button_pressed_audio = ExtResource("2_0k6bx")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.254)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control/ColorRect"]
position = Vector2(654.33325, 322.625)
scale = Vector2(1.6687498, 1.6687499)
texture = ExtResource("1_xvftn")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control/ColorRect/Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_0k6bx")
}

[node name="NewGameButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 485.0
offset_top = 215.0
offset_right = 578.0
offset_bottom = 244.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_2e2ej")
text = "New Game"

[node name="ContinueButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 485.0
offset_top = 249.0
offset_right = 578.0
offset_bottom = 278.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_2e2ej")
text = "Continue"

[node name="ExitButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 485.0
offset_top = 283.0
offset_right = 578.0
offset_bottom = 312.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_2e2ej")
text = "Exit"

[node name="Bonbon" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(625, 341)
scale = Vector2(2, 2)
texture = ExtResource("2_ux371")
hframes = 4
vframes = 7
frame = 24

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Bonbon"]
libraries = {
&"": SubResource("AnimationLibrary_j0m2k")
}
autoplay = "default"

[node name="PlayerSpawn" parent="." instance=ExtResource("4_skoes")]
position = Vector2(624, 367)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
max_polyphony = 4
